welcome.lessons.welcome.bat.bool2.CaughtSpeeding.scala.error
caughtSpeeding:14: error: ';' expected but 'else' found.
  }else{
   ^caughtSpeeding:28: error: Unmatched closing brace '}' ignored here
 }
 ^